test/tests/stages/18_structures/invalid_types/extra_credit/bad_union_member_access/union_bad_member.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[42]:
  union
  identifier(s)
  {
  int
  identifier(x)
  ;
  int
  identifier(y)
  ;
  }
  ;
  union
  identifier(t)
  {
  int
  identifier(blah)
  ;
  int
  identifier(y)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(s)
  identifier(foo)
  =
  {
  const int(1)
  }
  ;
  return
  identifier(foo)
  .
  identifier(blah)
  ;
  }
